kubernetes/basic/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: colors
  name: colors
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: colors
  type: ClusterIP
