kubernetes/basic/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: <ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: colors
            port:
              number: 80
